Fix: 변수적용(section-gap 믹스인)

--- a/assets/scss/abstracts/_mixins.scss
+++ b/assets/scss/abstracts/_mixins.scss
@@ -1,10 +1,10 @@
 @mixin common-section-gap {
-  padding-top: 150px;
+  padding-top: $gap-desktop;
   @media screen and (max-width: 991px) {
-    padding-top: 130px;
+    padding-top: $gap-tablet;
   }
   @media screen and (max-width: 479px) {
-    padding-top: 100px;
+    padding-top: $gap-mobile;
   }
 }
 
